package com.flipkart.protobuf.ext.generator.test.sample;

import org.joda.time.DateTime;

public class PlainMessage {
	double double1;
	float float1;
	int int1;
	long long1;
	boolean boolean1;
	String string1;
	private DateTime dateTime;
	private Object object;
	private EnumContainer.SIMPLE_ENUM simple_enum;

	Double double2;
	Float float2;
	Integer int2;
	Long long2;
	Boolean boolean2;
}
